--- a/index.html
+++ b/index.html
@@ -1,8 +1,119 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PRESCOTT BLACKLER</title>
+  <link rel='icon' href='css/img/pb_icon_small.png' type='image/x-icon' />
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/hamburgers.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+</head>
 
 <body>
-  <h1>TEST</h1>
+  <div id="big-wrapper">
+    <div id="menu">
+      <div class="language">
+        <h5 class="change-language">CHANGE LANGUAGE</h5>
+        <a class="swedish-flag-btn show"><img src="css/img/swedish-flag.png" alt="swedish flag"
+            class="swedish-flag"></a>
+        <a class="uk-flag-btn"><img src="css/img/UK-flag.png" alt="uk flag" class="uk-flag"></a>
+      </div>
+      <ul>
+        <li class="menu-title">PROJEKT</li>
+        <li><a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker">Clark's
+            Domebreaker</a></li>
+        <li><a href="#">What's for Dinner?</a></li>
+        <li><a href="#">Nerdflix</a></li>
+        <li><a target="_blank" href="https://www.mountainsidemusicacademy.com">Mountainside Music Academy</a></li>
+        <li><a href="#">Meetup App</a></li>
+      </ul>
+    </div>
+    <div id="overlay" class="show"></div>
+    <button class="hamburger hamburger--elastic animated fadeInDown" type="button" id="the-burger">
+      <span class="hamburger-box">
+        <span class="hamburger-inner"></span>
+      </span>
+    </button>
+    <div id="medium-wrapper">
+      <section class="first-section-wrapper">
+        <div class="slide-show-area"></div>
+        <div class="slide-show-area-overlay"></div>
+
+
+        <div class="headline animated fadeInLeft">
+          <h1 class="large-headline">WEBBUTVECKLARE.<br>VEM VILL<br>VARA I SVERIGE.</h1>
+          <p class="blurb" id="trigger">Hej! Jag heter Prescott. Jag tycker om coding,<br> design och att blir i skogen.
+          </p>
+        </div>
+      </section>
+
+      <section class="project-area">
+        <div class="project-area-header animated fadeInUp">
+          <h1 class="welcome">Välkommen</h1><br>
+          <h2 class="scroll-down">Rulla ner för några av mina<br>mest nyliga projekt.</h2>
+        </div>
+        <div class="my-projects"></div>
+        <div class="project-card">
+          <div class="c1">
+            <a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker"><img class="little-comp"
+                src="css/img/clarks.png">
+              <h3>Clark's Domebreaker</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="c2">
+            <a href="#"><img class="little-comp" src="css/img/dinner.png">
+              <h3>What's for Dinner?</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="c3">
+            <a href="#"><img class="little-comp" src="css/img/nerdflix.png">
+              <h3>Nerdflix</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="c4">
+            <a target="_blank" href="https://www.mountainsidemusicacademy.com"><img class="little-comp"
+                src="css/img/mma.png">
+              <h3>Mountainside Music Academy</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="c5">
+            <a href="#"><img class="little-comp" src="css/img/placeholder.png">
+              <h3>Meetup App</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="c6">
+            <a href="about.html"><img class="about-me" src="css/img/prescott.png">
+              <h3 class="about-me-title">OM MIG</h3>
+            </a>
+          </div>
+        </div>
+
+
+
+      </section>
+
+    </div>
+  </div>
+  <!-- <div id="loading">
+    <div class="to-center">
+      <img class="loading-img animated fadeInLeft" src="css/img/pb_icon_small.png" />
+    </div>
+  </div> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/jquery.waypoints.min.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
