--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li class="menu-title">PROJEKT</li>
         <li><a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker">Clark's
             Domebreaker</a></li>
-        <li><a href="#">What's for Dinner?</a></li>
+        <li><a target="_blank" href="https://the-gaffer-5.github.io/real-cookbook-app/">What's for Dinner?</a></li>
         <li><a href="#">Nerdflix</a></li>
         <li><a target="_blank" href="https://www.mountainsidemusicacademy.com">Mountainside Music Academy</a></li>
         <li><a href="#">Meetup App</a></li>
