--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         </div>
         <div class="project-card">
           <div class="c2">
-            <a href="#"><img class="little-comp" src="css/img/dinner.png">
+            <a href="https://the-gaffer-5.github.io/real-cookbook-app/"><img class="little-comp"
+                src="css/img/dinner.png">
               <h3>What's for Dinner?</h3>
             </a>
           </div>
