--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker">Clark's
             Domebreaker</a></li>
         <li><a target="_blank" href="https://the-gaffer-5.github.io/real-cookbook-app/">What's for Dinner?</a></li>
-        <li><a href="#">Nerdflix</a></li>
+        <li><a href="https://prescottflixapp.herokuapp.com/client">Nerdflix</a></li>
         <li><a target="_blank" href="https://www.mountainsidemusicacademy.com">Mountainside Music Academy</a></li>
         <li><a href="#">Meetup App</a></li>
       </ul>
@@ -73,7 +73,7 @@
         </div>
         <div class="project-card">
           <div class="c3">
-            <a href="#"><img class="little-comp" src="css/img/nerdflix.png">
+            <a href="https://prescottflixapp.herokuapp.com/client"><img class="little-comp" src="css/img/nerdflix.png">
               <h3>Nerdflix</h3>
             </a>
           </div>
