add taget _blank

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         </div>
         <div class="project-card">
           <div class="c3">
-            <a href="https://prescottflixapp.herokuapp.com/client"><img class="little-comp" src="css/img/nerdflix.png">
+            <a target="_blank" href="https://prescottflixapp.herokuapp.com/client"><img class="little-comp"
+                src="css/img/nerdflix.png">
               <h3>Nerdflix</h3>
             </a>
           </div>
