--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <h5 class="change-language">CHANGE LANGUAGE</h5>
         <a class="swedish-flag-btn show"><img src="css/img/swedish-flag.png" alt="swedish flag"
             class="swedish-flag"></a>
-        <a class="uk-flag-btn"><img src="css/img/UK-Flag.png" alt="uk flag" class="uk-flag"></a>
+        <a class="uk-flag-btn"><img src="css/img/UK-flag.png" alt="uk flag" class="uk-flag"></a>
       </div>
       <ul>
         <li class="menu-title">PROJEKT</li>
         <li><a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker">Clark's
             Domebreaker</a></li>
         <li><a target="_blank" href="https://the-gaffer-5.github.io/real-cookbook-app/">What's for Dinner?</a></li>
-        <li><a href="https://prescottflixapp.herokuapp.com/client">Nerdflix</a></li>
+        <li><a target="_blank" href="https://prescottflixapp.herokuapp.com/client">Nerdflix</a></li>
         <li><a target="_blank" href="https://www.mountainsidemusicacademy.com">Mountainside Music Academy</a></li>
-        <li><a href="#">Meetup App</a></li>
+        <li><a target="_blank" href="https://the-gaffer-5.github.io/meetup/">Meetup App</a></li>
       </ul>
     </div>
     <div id="overlay" class="show"></div>
@@ -40,11 +40,10 @@
       <section class="first-section-wrapper">
         <div class="slide-show-area"></div>
         <div class="slide-show-area-overlay"></div>
-
-
         <div class="headline animated fadeInLeft">
           <h1 class="large-headline">WEBBUTVECKLARE.<br>VEM VILL<br>VARA I SVERIGE.</h1>
-          <p class="blurb" id="trigger">Hej! Jag heter Prescott. Jag tycker om coding,<br> design och att blir i skogen.
+          <p class="blurb" id="trigger">Hej! Jag heter Prescott. Jag tycker om coding,<br> design och att blir i
+            skogen.
           </p>
         </div>
       </section>
@@ -56,41 +55,44 @@
         </div>
         <div class="my-projects"></div>
         <div class="project-card">
-          <div class="c1">
-            <a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker"><img class="little-comp"
-                src="css/img/clarks.png">
-              <h3>Clark's Domebreaker</h3>
+          <div class="c3">
+            <a target="_blank" href="https://prescottflixapp.herokuapp.com/client"><img class="little-comp"
+                src="css/img/nerdflixcorn.png">
+              <h3>Nerdflix</h3>
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="c4">
+            <a target="_blank" href="https://www.mountainsidemusicacademy.com"><img class="little-comp"
+                src="css/img/mtnipad2.png">
+              <h3>Mountainside Music Academy</h3>
             </a>
           </div>
         </div>
         <div class="project-card">
           <div class="c2">
             <a target="_blank" href="https://the-gaffer-5.github.io/real-cookbook-app/"><img class="little-comp"
-                src="css/img/dinner.png">
+                src="css/img/dinnercarrot.png">
               <h3>What's for Dinner?</h3>
             </a>
           </div>
         </div>
-        <div class="project-card">
-          <div class="c3">
-            <a target="_blank" href="https://prescottflixapp.herokuapp.com/client"><img class="little-comp"
-                src="css/img/nerdflix.png">
-              <h3>Nerdflix</h3>
-            </a>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="c4">
-            <a target="_blank" href="https://www.mountainsidemusicacademy.com"><img class="little-comp"
-                src="css/img/mma.png">
-              <h3>Mountainside Music Academy</h3>
-            </a>
-          </div>
-        </div>
+
         <div class="project-card">
           <div class="c5">
-            <a href="#"><img class="little-comp" src="css/img/placeholder.png">
+            <a target="_blank" href="https://the-gaffer-5.github.io/meetup/"><img class="little-comp"
+                src="css/img/placeholder.png">
               <h3>Meetup App</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="c1">
+            <a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker"><img class="little-comp"
+                src="css/img/clarks.png">
+              <h3>Clark's Domebreaker</h3>
             </a>
           </div>
         </div>
