--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
           </div>
         </div>
         <div class="project-card">
+          <div class="c1">
+            <a target="_blank" href="https://the-gaffer-5.github.io/my-awesome-quiz-app/welcome"><img
+                class="little-comp" src="css/img/quiz.png">
+              <h3>Angular Quiz App</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="c5">
+            <a target="_blank" href="https://the-gaffer-5.github.io/vue-todo-app/"><img class="little-comp"
+                src="css/img/placeholder.png">
+              <h3>Vue Todo List</h3>
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
           <div class="c6">
             <a href="about.html"><img class="about-me" src="css/img/prescott.png">
               <h3 class="about-me-title">OM MIG</h3>
