--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </div>
         <div class="project-card">
           <div class="c1">
-            <a target="_blank" href="https://the-gaffer-5.github.io/my-awesome-quiz-app/welcome"><img
-                class="little-comp" src="css/img/quiz.png">
+            <a target="_blank" href="https://the-gaffer-5.github.io/my-awesome-quiz-app/"><img class="little-comp"
+                src="css/img/quiz.png">
               <h3>Angular Quiz App</h3>
             </a>
           </div>
