--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h5 class="change-language">CHANGE LANGUAGE</h5>
         <a class="swedish-flag-btn show"><img src="css/img/swedish-flag.png" alt="swedish flag"
             class="swedish-flag"></a>
-        <a class="uk-flag-btn"><img src="css/img/uk-flag.png" alt="uk flag" class="uk-flag"></a>
+        <a class="uk-flag-btn"><img src="css/img/UK-FLAG.png" alt="uk flag" class="uk-flag"></a>
       </div>
       <ul>
         <li class="menu-title">PROJEKT</li>
