--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
     </div>
     <div id="overlay" class="show"></div>
-    <button class="hamburger hamburger--elastic animated fadeInDown" type="button" id="the-burger">
+    <button class="hamburger hamburger--elastic" type="button" id="the-burger">
       <span class="hamburger-box">
         <span class="hamburger-inner"></span>
       </span>
@@ -53,64 +53,9 @@
           <h1 class="welcome">Välkommen</h1><br>
           <h2 class="scroll-down">Rulla ner för några av mina<br>mest nyliga projekt.</h2>
         </div>
-        <div class="my-projects"></div>
-        <div class="project-card">
-          <div class="c3">
-            <a target="_blank" href="https://prescottflixapp.herokuapp.com/client"><img class="little-comp"
-                src="css/img/nerdflixcorn.png">
-              <h3>Nerdflix</h3>
-            </a>
-          </div>
-        </div>
+        <div class="my-projects">
 
-        <div class="project-card">
-          <div class="c4">
-            <a target="_blank" href="https://www.mountainsidemusicacademy.com"><img class="little-comp"
-                src="css/img/mtnipad2.png">
-              <h3>Mountainside Music Academy</h3>
-            </a>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="c2">
-            <a target="_blank" href="https://the-gaffer-5.github.io/real-cookbook-app/"><img class="little-comp"
-                src="css/img/dinnercarrot.png">
-              <h3>What's for Dinner?</h3>
-            </a>
-          </div>
-        </div>
 
-        <div class="project-card">
-          <div class="c5">
-            <a target="_blank" href="https://the-gaffer-5.github.io/meetup/"><img class="little-comp"
-                src="css/img/placeholder.png">
-              <h3>Meetup App</h3>
-            </a>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="c1">
-            <a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker"><img class="little-comp"
-                src="css/img/clarks.png">
-              <h3>Clark's Domebreaker</h3>
-            </a>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="c1">
-            <a target="_blank" href="https://the-gaffer-5.github.io/my-awesome-quiz-app/"><img class="little-comp"
-                src="css/img/quiz.png">
-              <h3>Angular Quiz App</h3>
-            </a>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="c5">
-            <a target="_blank" href="https://the-gaffer-5.github.io/vue-todo-app/"><img class="little-comp"
-                src="css/img/placeholder.png">
-              <h3>Vue Todo List</h3>
-            </a>
-          </div>
         </div>
         <div class="project-card">
           <div class="c6">
@@ -118,14 +63,11 @@
               <h3 class="about-me-title">OM MIG</h3>
             </a>
           </div>
-        </div>
-
-
-
       </section>
-
     </div>
   </div>
+  </div>
+
   <!-- <div id="loading">
     <div class="to-center">
       <img class="loading-img animated fadeInLeft" src="css/img/pb_icon_small.png" />
