--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
           <h1 class="welcome">Välkommen</h1><br>
           <h2 class="scroll-down">Rulla ner för några av mina<br>mest nyliga projekt.</h2>
         </div>
-        <div class="my-projects">
 
+        <div class="my-projects"> </div>
 
-        </div>
         <div class="project-card">
           <div class="c6">
             <a href="about.html"><img class="about-me" src="css/img/prescott.png">
