--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li class="menu-title">PROJEKT</li>
         <li><a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker">Clark's
             Domebreaker</a></li>
+        <li><a target="_blank" href="https://the-gaffer-5.github.io/fello-deploy/">Fello</a></li>
         <li><a target="_blank" href="https://the-gaffer-5.github.io/real-cookbook-app/">What's for Dinner?</a></li>
         <li><a target="_blank" href="https://prescottflixapp.herokuapp.com/client">Nerdflix</a></li>
         <li><a target="_blank" href="https://www.mountainsidemusicacademy.com">Mountainside Music Academy</a></li>
