--- a/index.html
+++ b/index.html
@@ -1,81 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PRESCOTT BLACKLER</title>
-  <link rel='icon' href='css/img/pb_icon_small.png' type='image/x-icon' />
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/hamburgers.min.css">
-  <link rel="stylesheet" href="css/animate.css">
-</head>
-
-<body>
-  <div id="big-wrapper">
-    <div id="menu">
-      <div class="language">
-        <h5 class="change-language">CHANGE LANGUAGE</h5>
-        <a class="swedish-flag-btn show"><img src="css/img/swedish-flag.png" alt="swedish flag"
-            class="swedish-flag"></a>
-        <a class="uk-flag-btn"><img src="css/img/uk-flag.png" alt="uk flag" class="uk-flag"></a>
-      </div>
-      <ul>
-        <li class="menu-title">PROJEKT</li>
-        <li><a target="_blank" href="https://humbabah.itch.io/clarksdomebreaker">Clark's
-            Domebreaker</a></li>
-        <li><a target="_blank" href="https://the-gaffer-5.github.io/fello-deploy/">Fello</a></li>
-        <li><a target="_blank" href="https://the-gaffer-5.github.io/real-cookbook-app/">What's for Dinner?</a></li>
-        <li><a target="_blank" href="https://prescottflixapp.herokuapp.com/client">Nerdflix</a></li>
-        <li><a target="_blank" href="https://www.mountainsidemusicacademy.com">Mountainside Music Academy</a></li>
-        <li><a target="_blank" href="https://the-gaffer-5.github.io/meetup/">Meetup App</a></li>
-      </ul>
-    </div>
-    <div id="overlay" class="show"></div>
-    <button class="hamburger hamburger--elastic" type="button" id="the-burger">
-      <span class="hamburger-box">
-        <span class="hamburger-inner"></span>
-      </span>
-    </button>
-    <div id="medium-wrapper">
-      <section class="first-section-wrapper">
-        <div class="slide-show-area"></div>
-        <div class="slide-show-area-overlay"></div>
-        <div class="headline animated fadeInLeft">
-          <h1 class="large-headline">WEBBUTVECKLARE.<br>VEM VILL<br>VARA I SVERIGE.</h1>
-          <p class="blurb" id="trigger">Hej! Jag heter Prescott. Jag tycker om coding,<br> design och att blir i
-            skogen.
-          </p>
-        </div>
-      </section>
-
-      <section class="project-area">
-        <div class="project-area-header animated fadeInUp">
-          <h1 class="welcome">Välkommen</h1><br>
-          <h2 class="scroll-down">Rulla ner för några av mina<br>mest nyliga projekt.</h2>
-        </div>
-
-        <div class="my-projects"> </div>
-
-        <div class="project-card">
-          <div class="c8">
-            <a href="about.html"><img class="about-me" src="css/img/prescott.png">
-              <h3 class="about-me-title">OM MIG</h3>
-            </a>
-          </div>
-      </section>
-    </div>
-  </div>
-  </div>
-
-  <!-- <div id="loading">
-    <div class="to-center">
-      <img class="loading-img animated fadeInLeft" src="css/img/pb_icon_small.png" />
-    </div>
-  </div> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/scripts.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="A portfolio"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Prescott Blackler</title><link href="https://fonts.googleapis.com/css?family=Cabin:400,600&display=swap" rel="stylesheet"><link href="/static/css/main.b9a9ed5f.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root" class="loader"></div><script>!function(i){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],l=0,f=[];l<n.length;l++)t=n[l],Object.prototype.hasOwnProperty.call(a,t)&&a[t]&&f.push(a[t][0]),a[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(i[r]=o[r]);for(s&&s(e);f.length;)f.shift()();return c.push.apply(c,u||[]),p()}function p(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==a[u]&&(n=!1)}n&&(c.splice(r--,1),e=l(l.s=t[0]))}return e}var t={},a={1:0},c=[];function l(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return i[e].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=i,l.c=t,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(r,e){if(1&e&&(r=l(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)l.d(t,n,function(e){return r[e]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/";var r=this["webpackJsonpportfolio2.0"]=this["webpackJsonpportfolio2.0"]||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;p()}([])</script><script src="/static/js/2.a11caf71.chunk.js"></script><script src="/static/js/main.347fe08c.chunk.js"></script></body></html>
